@@ -59,6 +59,7 @@ Application Changes:
 - Weapons and ammo types that cause the fire damage type (e.g. Flame Bracers) can now properly process other sources of damage and damage type modification.
 - Some inconsistent handling of drone armor mods and their effects on other stats when using Rigger 5.0's drone modding rules has been fixed.
 - Removed Capacity check for weapon accessories that allow child gear items. This allows Weapon Commlink to take Commlink accessories, for example.
+- Fixed custom category spells not presenting as a treenode.
 
 Data Changes:
 - Corrected the categories (and therefore also mounts, concealabilities, and ranges) for the Krime AKM-SU97, the Krime Ditch, the Krime Stopper-II, the Krime Soldier, and the Krime Ripper as per forum errata found here: https://forums.shadowruntabletop.com/index.php?topic=31750.msg544923#msg544923.
